--- a/src/main/resources/templates/search/fragmentSearchResult.html
+++ b/src/main/resources/templates/search/fragmentSearchResult.html
@@ -24,11 +24,11 @@
                             <td th:text="${manualinput.originDivisionGroup.name}"></td>
                             <td th:text="${manualinput.name}"></td>
                             <td>
-                                <a th:href="@{'/manual/input/view/' + ${manualinput.id}}" class="glyphicon glyphicon-eye-open link-btn-ico-sm-3 black-link" title="View Manual Input" >
+                                <a th:href="@{'/manual-input/view/' + ${manualinput.id}}" class="glyphicon glyphicon-eye-open link-btn-ico-sm-3 black-link" title="View Manual Input" >
                                 </a>
                             </td>
                             <td>
-                                <a th:href="@{'/manual/input/edit/' + ${manualinput.id}}" class="glyphicon glyphicon-pencil link-btn-ico-sm-3 black-link" title="Edit Manual Input" >
+                                <a th:href="@{'/manual-input/edit/' + ${manualinput.id}}" class="glyphicon glyphicon-pencil link-btn-ico-sm-3 black-link" title="Edit Manual Input" >
                                 </a>
                             </td>
                             <td>
