--- a/src/main/resources/templates/base/header.html
+++ b/src/main/resources/templates/base/header.html
@@ -77,7 +77,7 @@
                         <li th:classappend="${#httpServletRequest.getRequestURI() == '/' 
                             || #httpServletRequest.getRequestURI() == '/ring/'
                             || #httpServletRequest.getRequestURI().contains('/home') ? 'active':''}"><a th:href="@{/}" title="Home"><span class="sub_icon glyphicon glyphicon-home"></span>Home</a></li>
-                        <li th:classappend="${#httpServletRequest.getRequestURI().contains('/manual/input') ? 'active':''}"><a th:href="@{/manual/input/list}" title="Manual Input"><span class="sub_icon glyphicon glyphicon-file"></span>Manual Input</a></li>
+                        <li th:classappend="${#httpServletRequest.getRequestURI().contains('/manual-input') ? 'active':''}"><a th:href="@{/manual-input/list}" title="Manual Input"><span class="sub_icon glyphicon glyphicon-file"></span>Manual Input</a></li>
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/search/') ? 'active':''}"><a th:href="@{/search/search}" title="Search"><span class="sub_icon glyphicon glyphicon-search"></span>Search</a></li>
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/group/') ? 'active':''}"><a th:href="@{/group/list}" title="Group"><span class="sub_icon glyphicon glyphicon-tag"></span>Group</a></li>
                         <!--<li th:classappend="${#httpServletRequest.getRequestURI().contains('/log/') ? 'active':''}"><a th:href="@{/log/list}" title="Log"><span class="sub_icon glyphicon glyphicon-sunglasses"></span>Log</a></li>-->
