--- a/src/main/resources/templates/manualInput/list.html
+++ b/src/main/resources/templates/manualInput/list.html
@@ -17,9 +17,9 @@
                             <a href="#" title="Create Manual Input" class="glyphicon glyphicon-plus dropdown-toggle link-btn-ico-size-12 black-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="black-link" th:href="@{'/manual/input/create?type=CSV'}">For CSV File</a></li>
-                                <!--<li><a class="black-link" th:href="@{'/manual/input/create?type=XLSX'}">For XLSX File</a></li> -->
-                                <li><a class="black-link" th:href="@{'/manual/input/create?type=GSHEETS'}">For Google Sheets</a></li>
+                                <li><a class="black-link" th:href="@{'/manual-input/create?type=CSV'}">For CSV File</a></li>
+                                <li><a class="black-link" th:href="@{'/manual-input/create?type=XLSX'}">For XLSX File</a></li>
+                                <li><a class="black-link" th:href="@{'/manual-input/create?type=GSHEETS'}">For Google Sheets</a></li>
                             </ul>
                         </div>
                     </th>
@@ -60,11 +60,11 @@
                             <td th:text="${manualinput.originDivisionGroup.name}"></td>
                             <td th:text="${manualinput.name}"></td>
                             <td>
-                                <a th:href="@{'/manual/input/view/' + ${manualinput.id}}" class="glyphicon glyphicon-eye-open link-btn-ico-sm-3 black-link" title="View Manual Input" >
+                                <a th:href="@{'/manual-input/view/' + ${manualinput.id}}" class="glyphicon glyphicon-eye-open link-btn-ico-sm-3 black-link" title="View Manual Input" >
                                 </a>
                             </td>
                             <td>
-                                <a th:href="@{'/manual/input/edit/' + ${manualinput.id}}" class="glyphicon glyphicon-pencil link-btn-ico-sm-3 black-link" title="Edit Manual Input" >
+                                <a th:href="@{'/manual-input/edit/' + ${manualinput.id}}" class="glyphicon glyphicon-pencil link-btn-ico-sm-3 black-link" title="Edit Manual Input" >
                                 </a>
                             </td>
                             <td>
