--- a/src/main/resources/templates/monitor/monitor.html
+++ b/src/main/resources/templates/monitor/monitor.html
@@ -21,7 +21,7 @@ and Ring will take care of providing data in a more fault-tolerant way to your p
 		<br />
 		<div class="list-group">
 
-  			<a class="list-group-item list-group-item-action flex-column align-items-start" th:href="@{/manual/input/list}">
+  			<a class="list-group-item list-group-item-action flex-column align-items-start" th:href="@{/manual-input/list}">
 		    	<div class="d-flex w-100 justify-content-between">
 		      		<h5 class="mb-1">Manual Inputs</h5>
 		    	</div>
