--- a/src/main/resources/templates/importlog/view.html
+++ b/src/main/resources/templates/importlog/view.html
@@ -8,8 +8,18 @@
         <th:block th:include="base/header :: navbar"></th:block>
         
         <div class="container-fluid main-content">
-
-            <h2>Log</h2>
+            
+            <table>
+                <tr>
+                    <th>
+                        <h2 class="page-title">Log</h2>
+                    </th>
+                    <th class="btn-action">
+                        <a th:href="@{'/manual-input/view/' + ${log.manualInput.id}}" title="Back to Manual Input" class="glyphicon glyphicon-arrow-left link-btn-ico-sm-2 black-link"></a>
+                    </th>
+                </tr>
+            </table>
+            
             <div class="col-sm-12">
                 <pre th:text="${log.text}" ></pre>
                 <pre th:if="${!log.status.equals('RUNNING')}" th:text="${log.status}" ></pre>
