--- a/src/main/resources/templates/manualInput/view.html
+++ b/src/main/resources/templates/manualInput/view.html
@@ -105,8 +105,11 @@
                 </div>
             </div>
 
-            <form class="form-horizontal" enctype="multipart/form-data" th:method="post" th:object="${manualInput}" th:action="@{'/manual-input/uploadfile/' + ${manualInput.id}}">
+            <form class="form-horizontal" enctype="multipart/form-data" th:method="post" th:object="${manualInput}" th:action="@{'/manual-input/uploadfile/' + ${manualInput.id} + '?' + ${_csrf.parameterName} + '=' + ${_csrf.token}}">
                 <input type='hidden' th:field='*{id}'/>
+                <input type="hidden" 
+                       name="${_csrf.parameterName}" 
+                       value="${_csrf.token}" />
 
                 <div class="row">
                     <div class="col-lg-12">
@@ -232,10 +235,10 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- display this part if XLSX is the file type -->
                 <div th:if="${manualInput.fileType.toString().equals('XLSX')}" >
-                    
+
                     <div class="col-lg-12">
                         <label>Sheet Name:</label>
                         <div class="form-group">
