--- a/src/main/resources/templates/manualInput/view.html
+++ b/src/main/resources/templates/manualInput/view.html
@@ -108,8 +108,8 @@
             <form class="form-horizontal" enctype="multipart/form-data" th:method="post" th:object="${manualInput}" th:action="@{'/manual-input/uploadfile/' + ${manualInput.id} + '?' + ${_csrf.parameterName} + '=' + ${_csrf.token}}">
                 <input type='hidden' th:field='*{id}'/>
                 <input type="hidden" 
-                       name="${_csrf.parameterName}" 
-                       value="${_csrf.token}" />
+                       th:name="${_csrf.parameterName}" 
+                       th:value="${_csrf.token}" />
 
                 <div class="row">
                     <div class="col-lg-12">
